--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:context=".MainActivity">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical"
+                  tools:context=".MainActivity">
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:id="@+id/start_btn"
+                android:text="start"/>
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/stop_btn"
+                android:text="stop"/>
         <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
             <TextView
                     android:gravity="bottom"
@@ -14,5 +20,5 @@
                     android:layout_height="wrap_content"
             />
         </ScrollView>
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
